:tada: 添加 oauth gateway 模块
Signed-off-by: zzx <1502266734@qq.com>

--- a/humor-parent/humor-commons/humor-pojo/pom.xml
+++ b/humor-parent/humor-commons/humor-pojo/pom.xml
@@ -15,7 +15,22 @@
     <description>humor 实体</description>
 
     <dependencies>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatis-plus-version}</version>
+        </dependency>
+        <!-- alibaba的druid数据库连接池 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>${druid.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
