--- a/humor-parent/humor-oauth/pom.xml
+++ b/humor-parent/humor-oauth/pom.xml
@@ -19,6 +19,16 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.zzx</groupId>
+            <artifactId>humor-common</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zzx</groupId>
+            <artifactId>humor-pojo</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
