--- a/humor-parent/pom.xml
+++ b/humor-parent/pom.xml
@@ -17,6 +17,8 @@
     <modules>
         <module>humor-oauth</module>
         <module>humor-commons</module>
+        <module>humor-services</module>
+        <module>humor-gateway</module>
     </modules>
 
     <properties>
@@ -26,7 +28,8 @@
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
         <nacos.version>2.1.0.RELEASE</nacos.version>
         <hutool-all.version>4.3.1</hutool-all.version>
-        <mybatis-plus-version>3.2.0</mybatis-plus-version>
+        <mybatis-plus-version>3.1.2</mybatis-plus-version>
+        <druid.version>1.1.9</druid.version>
     </properties>
 
     <dependencies>
