--- a/humor-parent/humor-services/pom.xml
+++ b/humor-parent/humor-services/pom.xml
@@ -3,31 +3,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.8.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.zzx</groupId>
+        <artifactId>humor-parent</artifactId>
+        <version>1.0</version>
     </parent>
     <groupId>com.zzx</groupId>
     <artifactId>humor-services</artifactId>
     <version>1.0</version>
     <name>humor-services</name>
+    <packaging>pom</packaging>
     <description>humor 服务</description>
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
-
-    <dependencies>
-    </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
