--- a/humor-parent/pom.xml
+++ b/humor-parent/pom.xml
@@ -30,6 +30,7 @@
         <hutool-all.version>4.3.1</hutool-all.version>
         <mybatis-plus-version>3.1.2</mybatis-plus-version>
         <druid.version>1.1.9</druid.version>
+        <zuul.ratelimit.version>1.3.2.RELEASE</zuul.ratelimit.version>
     </properties>
 
     <dependencies>
