--- a/humor-parent/humor-services/pom.xml
+++ b/humor-parent/humor-services/pom.xml
@@ -13,5 +13,28 @@
     <name>humor-services</name>
     <packaging>pom</packaging>
     <description>humor 服务</description>
+    <modules>
+        <module>humor-core</module>
+    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.zzx</groupId>
+            <artifactId>humor-pojo</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zzx</groupId>
+            <artifactId>humor-common</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
